Don't propagate line layout in reflow state when we're not in the line.  b=320502  r+sr=roc